--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-apollo",
-  "version": "2.2.4",
+  "version": "2.3.0-alpha.0",
   "author": "opensource@apollographql.com",
   "browser": "lib/react-apollo.browser.umd.js",
   "description": "React data container for Apollo Client",
@@ -20,7 +20,7 @@
   "scripts": {
     "compile": "tsc && rimraf lib/test && mv lib/src/* lib/. && rimraf lib/src",
     "danger": "danger run --verbose",
-    "deploy": "cd lib && npm publish",
+    "deploy": "cd lib && npm publish --tag alpha",
     "filesize": "bundlesize",
     "jest": "jest --runInBand --coverage",
     "lint": "tslint --project tsconfig.json --config tslint.json",
@@ -87,7 +87,7 @@
     "trailingComma": "all"
   },
   "peerDependencies": {
-    "apollo-client": "^2.3.8",
+    "apollo-client": "^2.5.0-alpha.1",
     "react": "0.14.x || 15.* || ^15.0.0 || ^16.0.0",
     "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0"
   },
@@ -106,7 +106,7 @@
     "@types/zen-observable": "0.8.0",
     "apollo-cache": "1.1.17",
     "apollo-cache-inmemory": "1.2.10",
-    "apollo-client": "2.4.2",
+    "apollo-client": "2.5.0-alpha.1",
     "apollo-link": "1.2.1",
     "babel-core": "6.26.3",
     "babel-jest": "23.6.0",
